# Applitrace

./: .gitignore  README.md
backend/services/extension_service/: main.py  pyproject.toml
backend/services/extension_service/api/: routes.py
backend/services/extension_service/models/: advertin_model.py
